test/e2e/pass/runtime/generic_reference_runtime_pointee.cst
struct Point { x: num }

fn view<T>(value: &T) -> runtime num {
    let _ = value;
    1
}

runtime fn source() -> Point {
    Point { x: 1 }
}

fn main() -> runtime num {
    let point: runtime Point = source();
    view(&point.x)
}
