test/e2e/fail_compile/type_errors/ct_required_nested_qualifier.cst
fn view(value: &!runtime num) -> &num {
    value
}

fn main() {}
